Fixes squishy circles

--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -596,6 +596,7 @@ body{
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  width: 185px;
 }
 .secondary .footer{
   margin: 80px 0 0 0;
@@ -688,6 +689,7 @@ body{
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  width: 260px;
 }
 
 /* Footer */
